--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,21 @@
 </head>
 <body>
 
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <%= link_to "WaDokuManagementAPI", root_path, :class => 'brand' %>
+      <ul class="nav">
+
+      </ul>
+
+      <ul class="nav pull-right">
+        <li><%= link_to "#{current_user.email} abmelden.", destroy_user_session_path, :method => :delete %></li>
+      </ul>
+    </div>
+  </div>
+
+</div>  
 <%= yield %>
 
 <p class="notice"><%= notice %></p>
