--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,14 @@
 </head>
 <body>
 
-<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
       <%= link_to "WaDokuManagementAPI", root_path, :class => 'brand' %>
       <ul class="nav">
-
+        <% if current_user.status == "admin" %>
+          <li><%= link_to "Users", users_path, :method => :get %></li>
+        <% end %>
       </ul>
 
       <ul class="nav pull-right">
@@ -21,9 +23,16 @@
       </ul>
     </div>
   </div>
-
 </div>  
-<%= yield %>
+
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span12">
+      <%= yield %>
+    </div>
+  </div>
+</div>
+
 
 </body>
 </html>
