--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Listing users</h1>
+<% if current_user.status == 'admin' %>
+  <h1>Listing users</h1>
 
 <table>
   <tr>
@@ -11,8 +12,8 @@
     <th></th>
   </tr>
 
-<% @users.each do |user| %>
-  <tr>
+  <% @users.each do |user| %>
+    <tr>
     <td><%= user.name %></td>
     <td><%= user.email %></td>
     <td><%= user.status %></td>
@@ -22,5 +23,8 @@
   </tr>
 <% end %>
 </table>
+<% else %>
+  <p>Access denied!</p>
+  <% end %>
 
 
