add database cleaner and view tests

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.text_field :status, :readonly => true %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Update user", :id => "update_user"%>
   </div>
 <% end %>
