--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,17 +12,11 @@
 
 <p>
   <b>Status:</b>
-  <%= form_for @user do |f| %>
+  <%= form_for @user, :url => update_user_status_path, :method => :put  do |f| %>
   <% status = {"admin" => "admin", "editor" => "editor", "user" => "user"} %>
   <%= f.select(:status, options_for_select([["admin", "admin"], ["editor", "editor"], ["user", "user"]], status[@user.status])) %> 
 </p>
 
-<p>
-  <b>Password:</b>
-  <%= @user.password %>
-</p>
-
-
-<%= f.submit "Update user", :id => "update_user"%> 
+<%= f.submit "Update status", :id => "update_user"%> 
 <% end %>
 <%= link_to 'Back', users_path %>
