--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
           <li><%= link_to "Users", users_path, :method => :get %></li>
         <% end %>
           <li><%= link_to "Konto", edit_user_path(current_user), :method => :get %></li>
+          <li><%= link_to "Entries", search_path, :method => :get %></li>
       </ul>
 
       <ul class="nav pull-right">
